<resources>
    <string name="app_name">MoveMe</string>
    <!-- String values for LoginActivity -->
    <string name="button_movee_schedule">Schedule Move</string>
    <string name="button_movee_login">Log In</string>
    <string name="button_mover_login">Log In</string>
    <string name="button_mover_register">Register</string>
    <string name="text_mover">Mover?</string>
    <!-- String values for MoveeWorkflowActivity -->
    <string name="movee_scheduling_destinations_prompt">Location of Move</string>
    <string name="button_movee_scheduling_next_step">Next Step -&gt;</string>
    <string name="movee_scheduling_destinations_address_hint">Enter Address</string>
    <string name="movee_scheduling_peopleCount_prompt">How Many People do You Need to Help You Move?</string>
    <string name="button_movee_scheduling_previous_step">&lt;-Previous Step</string>
</resources>
