<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ViewFlipper
        android:id="@+id/moveeVF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <android.support.constraint.ConstraintLayout
            android:id="@+id/vf_destinations"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="134dp"
                android:layout_marginStart="134dp"
                android:layout_marginTop="32dp"
                android:text="@string/movee_scheduling_destinations_prompt"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="84dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="48dp" android:ems="10"
                android:hint="@string/movee_scheduling_destinations_address_hint"
                android:inputType="textPostalAddress"
                android:singleLine="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>
            <Button
                android:id="@+id/movee_schedule_location_button_next_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" android:layout_marginEnd="16dp"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp" android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp" android:paddingTop="10dp"
                android:text="@string/button_movee_scheduling_next_step"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
            />
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
            android:id="@+id/vf_people"
            android:layout_width="match_parent" android:layout_height="match_parent">

            <TextView
                android:id="@+id/scheduling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="11dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/movee_scheduling_peopleCount_prompt"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <NumberPicker
                android:id="@+id/movee_people_number_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="148dp"
                android:layout_marginStart="148dp"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scheduling"/>
            <Button
                android:id="@+id/movee_scheduling_people_button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:text="@string/button_movee_scheduling_next_step"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
            />
            <Button
                android:id="@+id/movee_scheduling_people_button_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:paddingBottom="10dp" android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:text="@string/button_movee_scheduling_previous_step"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </ViewFlipper>
</android.support.constraint.ConstraintLayout>